<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleReminder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_menu">Menu</string>
    <string name="Set">Set</string>
    <string name="Cancel">Cancel</string>
    <string name="title_activity_set_reminder">SetReminder</string>
    <string name="action_create">addReminder</string>
    <string name="title_activity_edit_reminder">EditReminder</string>
    <string name="Once">Once</string>
    <string name="Daily">Daily</string>
    <string name="Weekly">Weekly</string>
    <string name="Monthly">Monthly</string>
    <string name="selectdate">Select Date</string>
    <string name="title_activity_view_reminder">ViewReminder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_alarm_receiver">AlarmReceiverActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="GoodMorning">Good Morning</string>
    <string name="Metallic">Metallic</string>
    <string name="TimeCame">Time has Come</string>
    <string name="LittleDwarf">Little Dwarf</string>
    <string name="Default">Default</string>
    <string name="ViberOnce">Once</string>
    <string name="ViberTwice">Twice</string>
    <string name="ViberThrice">Thrice</string>
    <string name="action_help">Help</string>
    <string name="title_activity_help">Help</string>

</resources>
