<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    tools:context="com.shashank.simplereminder.Settings" >

        

     <LinearLayout
         android:id="@+id/linearLayout18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
       
         android:layout_centerHorizontal="true"
         android:orientation="vertical" >

         <TextView
             android:id="@+id/TextViewDate42"
             android:layout_width="250dp"
             android:layout_height="40dp"
             android:layout_marginBottom="10dp"
             android:ems="10"
             android:paddingLeft="20dp"
             android:text="Select Notification Sound"
             android:textSize="18sp" />

         <RadioGroup
             android:id="@+id/radioSound"
             android:layout_below="@+id/TextViewDate42"
             android:layout_centerHorizontal="true"
             android:paddingLeft="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >

             <RadioButton
                 android:id="@+id/radioDefault"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/Default" />

             <RadioButton
                 android:id="@+id/radioMetallic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/Metallic" />

             <RadioButton
                 android:id="@+id/radioTimeCame"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/TimeCame" />

             <RadioButton
                 android:id="@+id/radioLittleDwarf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/LittleDwarf" />

             <RadioButton
                 android:id="@+id/radioGoodMorning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="@string/GoodMorning" />
         </RadioGroup>

     </LinearLayout>

     <TextView
         android:id="@+id/TextViewDate52"
         android:layout_width="250dp"
         android:layout_height="40dp"
        android:layout_centerHorizontal="true"
         android:layout_below="@+id/linearLayout18"
         android:layout_marginTop="14dp"
         android:ems="10"
         android:paddingLeft="20dp"
         android:text="Select Vibration Pattern"
         android:textSize="18sp" />
     
 

     <RadioGroup
         android:id="@+id/radioViber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/TextViewDate52"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         
         android:orientation="horizontal" >

         <RadioButton
             android:id="@+id/radioViberOnce"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
             android:text="@string/ViberOnce" />

         <RadioButton
             android:id="@+id/radioViberTwice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ViberTwice" />

         <RadioButton
             android:id="@+id/radioViberThrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ViberThrice" />
     </RadioGroup>

     <LinearLayout
         android:id="@+id/linearLayout17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/radioViber"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:orientation="horizontal" >

         <Button
             android:id="@+id/ButtonSet5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            
             android:text="Set" />

     
     </LinearLayout>

</RelativeLayout>