<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    tools:context="com.shashank.simplereminder.SetReminder" >

    <LinearLayout
     android:id="@+id/linearLayout1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     
     android:layout_centerHorizontal="true"
    
     android:orientation="vertical" >

     <EditText
         android:id="@+id/EditTextNote1"
         android:layout_width="275dp"
         android:layout_height="85dp"
         android:layout_marginBottom="17dp"
         android:ems="10"
         android:textSize="20sp"
         android:hint="Note" />
 </LinearLayout>
 
 <LinearLayout
     android:id="@+id/linearLayout2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/linearLayout1"
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
     android:orientation="vertical" >

     
     <TextView
         android:id="@+id/TextViewDate1"
         android:layout_width="130dp"
         android:layout_height="40dp"
         android:layout_marginBottom="17dp"
         android:ems="10"
         android:paddingLeft="25dp"
         android:textSize="18sp"
         android:hint="Date" >

         
     </TextView>
  
  
     <TextView
         android:id="@+id/TextViewTime1"
         android:layout_width="130dp"
         android:layout_height="40dp"
         android:layout_above="@+id/radioOnce1"
         android:layout_alignLeft="@+id/radioOnce1"
         android:layout_marginBottom="17dp"
         android:ems="10"
         android:paddingLeft="25dp"
         android:textSize="18sp"
         android:hint="Time" >
         
         </TextView>
<RadioGroup
        android:id="@+id/radioAlarmType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioOnce1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Once" 
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioDaily1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Daily" />

         <RadioButton
            android:id="@+id/radioWeekly1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Weekly" />
         
         <RadioButton
            android:id="@+id/radioMonthly1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Monthly" />
        
    </RadioGroup>
     


     
     </LinearLayout>

 

 <LinearLayout
     android:id="@+id/linearLayout3"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/linearLayout2"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="20dp"
     android:orientation="horizontal" >

     <Button
         android:id="@+id/ButtonSet1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
         android:text="Set" />

     <Button
         android:id="@+id/ButtonCancel1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
         android:text="Cancel" />
 </LinearLayout>

 <LinearLayout
     android:id="@+id/linearLayout4"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/linearLayout3"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="20dp"
     android:orientation="horizontal" >
     
     </LinearLayout>
 
 
</RelativeLayout>