<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    tools:context="com.shashank.simplereminder.EditReminder" >

     <LinearLayout
         android:id="@+id/linearLayout6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:orientation="vertical" >

         <EditText
             android:id="@+id/EditTextNote2"
             android:layout_width="275dp"
             android:layout_height="85dp"
             android:layout_marginBottom="17dp"
             android:ems="10"
             android:textSize="20sp"
             android:hint="Note" >

             <requestFocus />
         </EditText>
     </LinearLayout>

     <LinearLayout
         android:id="@+id/linearLayout8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_below="@+id/linearLayout6"
         android:orientation="vertical" >

         <TextView
             android:id="@+id/TextViewDate2"
             android:layout_width="130dp"
             android:layout_height="40dp"
             android:layout_marginBottom="17dp"
             android:ems="10"
             android:hint="Date"
             android:paddingLeft="25dp"
             android:textSize="18sp" />

         <TextView
             android:id="@+id/TextViewTime2"
             android:layout_width="130dp"
             android:layout_height="40dp"
             android:layout_above="@+id/radioOnce2"
             android:layout_alignLeft="@+id/radioOnce2"
             android:layout_marginBottom="17dp"
             android:paddingLeft="25dp"
         	 android:textSize="18sp"
             android:ems="10"
             android:hint="Time" />
         
         <RadioGroup
        android:id="@+id/radioAlarmType2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioOnce2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Once" 
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioDaily2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Daily" />

         <RadioButton
            android:id="@+id/radioWeekly2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Weekly" />
         
         <RadioButton
            android:id="@+id/radioMonthly2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Monthly" />
        
    </RadioGroup>
         

      </LinearLayout>

     <LinearLayout
         android:id="@+id/linearLayout7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/linearLayout8"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:orientation="horizontal" >

         <Button
             android:id="@+id/ButtonSet2"
             android:layout_marginRight="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Set" />

         <Button
             android:id="@+id/ButtonCancel2"
             android:layout_marginLeft="40dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel" />
     </LinearLayout>
     
      <LinearLayout
     android:id="@+id/linearLayout12"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/linearLayout7"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="20dp"
     android:orientation="horizontal" >
     
     </LinearLayout>
     

</RelativeLayout>